<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBackgroud"
    tools:context=".ui.DetalhesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/ivCapa"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="center"
            android:src="@drawable/capadetalhes"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivCapaGibiDetalhe"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/borda_capa"
            android:scaleType="fitXY"
            android:src="@drawable/capa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/w_e_b_of_spider_man_1_of_5"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivCapaGibiDetalhe" />

        <TextView
            android:id="@+id/tvDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/descricao_gibi"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

        <TextView
            android:id="@+id/tvPublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/published"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescricao" />

        <TextView
            android:id="@+id/tvPublishedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="20dp"
            android:text="@string/february_2021"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tvPublished"
            app:layout_constraintTop_toBottomOf="@+id/tvDescricao" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPublished" />

        <TextView
            android:id="@+id/tvPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/_5_99"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tvPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvPublishedDate" />

        <TextView
            android:id="@+id/tvPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/pages"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

        <TextView
            android:id="@+id/tvPagesNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="10dp"
            android:text="@string/_36"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tvPages"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>